# off-planet-cdn-simulator

./: .env.example  .gitignore  .markdownlint-cli2.yaml  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  package.json  turbo.json
.github/workflows/: ci.yml  docker.yml  go.yml  rust.yml  security.yml  web.yml
apps/docs-site/: README.md
apps/web/: middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/src/app/: layout.tsx
apps/web/src/lib/: api-client.ts  hooks.ts  supabase-server.ts  validators.ts
apps/web/src/types/: index.ts
docs/: CONTRIBUTING.md
docs/dev-docs/: plan.md  progress.md
edge/: Cargo.toml
edge/crates/cache-proxy/: Cargo.toml
edge/crates/cache-proxy/src/: config.rs  fetch.rs  headers.rs  main.rs  proxy.rs  range_requests.rs  revalidate.rs
edge/crates/content-indexer/: Cargo.toml
edge/crates/content-indexer/src/: chunk.rs  config.rs  duckdb_export.rs  embeddings.rs  main.rs  qdrant.rs
edge/crates/edge-agent/: Cargo.toml
edge/crates/edge-agent/src/: api.rs  config.rs  heartbeat.rs  lib.rs  main.rs  sync.rs  telemetry.rs
edge/crates/edge-agent/tests/: api_test.rs
edge/crates/eviction-engine/: Cargo.toml
edge/crates/eviction-engine/src/: constraints.rs  lib.rs  score.rs  simulator.rs  tests.rs
edge/crates/registry-mirror/: Cargo.toml
edge/crates/registry-mirror/src/: config.rs  crates_io.rs  main.rs  manifest.rs  model_registry.rs  npm.rs  oci.rs  pypi.rs
edge/crates/shared/: Cargo.toml
edge/crates/shared/src/: crypto.rs  errors.rs  lib.rs  manifests.rs  telemetry.rs  types.rs
edge/crates/wasm-policy-runner/: Cargo.toml
edge/crates/wasm-policy-runner/src/: host.rs  lib.rs  runtime.rs  wit.rs
edge/examples/: sample-bandwidth-window.json  sample-cache-manifest.json  sample-policy.toml
infra/otel/: config.yaml
infra/scripts/: build-edge.sh  dev-down.sh  dev-up.sh  seed-demo.sh
services/control-api/: Dockerfile  go.mod  go.sum
services/control-api/api/: openapi.yaml
services/control-api/cmd/api/: main.go
services/control-api/internal/config/: config.go
services/control-api/internal/db/: analytics.go  db.go  (+10 more)
services/mcp-server/: Dockerfile  README.md  go.mod
services/policy-engine/: Dockerfile  go.mod
services/scheduler/: Dockerfile  go.mod
services/telemetry-ingest/: Dockerfile  go.mod
supabase/: config.toml  seed.sql
supabase/functions/export-cache-report/: index.ts
supabase/functions/webhook-node-alert/: index.ts
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_cache_objects.sql  0004_policies.sql  0005_jobs.sql  0006_telemetry.sql  0007_audit_logs.sql
tests/integration/: README.md  cache_objects_test.go  go.mod  health_test.go  helpers_test.go  nodes_test.go  policies_test.go  preload_jobs_test.go  sites_test.go
(+79 files in other folders)
