[package]
name = "eviction-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "eviction_engine"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = "1"
