[package]
name = "wasm-policy-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasm_policy_runner"
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
